--- a/app/src/main/res/layout/fragment_contact_info.xml
+++ b/app/src/main/res/layout/fragment_contact_info.xml
@@ -19,4 +19,20 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
+
+    <TextView
+        android:id="@+id/Program_description"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+<TextView
+    android:id="@+id/Program_category"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content" />
+<TextView
+    android:id="@+id/Program_sample"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content" />
+
+
+
 </LinearLayout>
