--- a/app/src/main/res/layout/fragment_contact_info.xml
+++ b/app/src/main/res/layout/fragment_contact_info.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,31 +9,105 @@
     tools:context=".fragment.ContactInfoFragment">
 
     <TextView
-
         android:id="@+id/Program_name"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:textSize="30sp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        />
+
 
     <TextView
-
         android:id="@+id/Program_date"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        app:layout_constraintHorizontal_bias="0.961"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/Program_name" />
+
+    <TextView
+        android:id="@+id/Summary_title"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-
-
+        android:layout_height="wrap_content"
+        android:gravity="left"
+        android:text="Program Description"
+        android:textSize="30sp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/Program_name" />
+    <TextView
+        android:id="@+id/black_line"
+        android:layout_width="match_parent"
+        android:background="#000000"
+        android:layout_height="1dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/Summary_title"/>
     <TextView
         android:id="@+id/Program_description"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-<TextView
-    android:id="@+id/Program_category"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content" />
-<TextView
-    android:id="@+id/Program_sample"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/black_line"/>
+
+    <TextView
+        android:id="@+id/How_to_apply_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="left"
+        android:text="How to Apply"
+        android:textSize="30sp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/Program_description" />
+    <TextView
+        android:id="@+id/black_line2"
+        android:layout_width="match_parent"
+        android:background="#000000"
+        android:layout_height="1dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/How_to_apply_title"/>
+    <TextView
+        android:id="@+id/how_to_apply_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/black_line2"/>
+
+    <TextView
+        android:id="@+id/Get_help_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="left"
+        android:text="Get Help"
+        android:textSize="30sp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/how_to_apply_text" />
+    <TextView
+        android:id="@+id/black_line3"
+        android:layout_width="match_parent"
+        android:background="#000000"
+        android:layout_height="1dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/Get_help_title"/>
+
+    <TextView
+        android:id="@+id/Get_help_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/black_line3"/>
 
 
-
-</LinearLayout>
+</android.support.constraint.ConstraintLayout>
