--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,6 +29,7 @@
 
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+        android:background="#000000"
     android:id="@+id/main_fragment_container">
 
 
