--- a/app/src/main/res/layout/fragment_recycler_view.xml
+++ b/app/src/main/res/layout/fragment_recycler_view.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".fragment.RecyclerViewFragment">
+    tools:context=".fragment.RecyclerViewFragment"
+    android:background="#000000">
 
     <android.support.v7.widget.SearchView
         android:id="@+id/searchview_state"
@@ -13,6 +14,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+        android:background="#706E6E"
         >
 
         <requestFocus/>
