--- a/app/src/main/res/layout/item_view.xml
+++ b/app/src/main/res/layout/item_view.xml
@@ -2,6 +2,7 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
+    android:background="#000000"
     android:layout_height="wrap_content">
 
     <android.support.v7.widget.CardView
@@ -9,6 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
+        android:background="#444242"
         android:textAlignment="gravity"
         app:cardCornerRadius="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -19,11 +21,13 @@
             android:id="@+id/master_LinearLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="#242323"
             android:orientation="horizontal">
 
         <TextView
             android:id="@+id/text_sample"
             android:layout_width="285dp"
+            android:textColor="#FFFFFF"
             android:layout_height="wrap_content"
             android:textSize="24sp" />
 
